<resources>
    <string name="app_name">Marienbad</string>

    <!-- on activity_main -->
    <string name="welcome_text">Welcome to the game of Marienbad!</string>
    <string name="instruct_text">read instructions</string>
    <string name="introBody">This game is based on the game played in the movie, "Marienbad".</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="start_button_text">Start game</string>

    <string name="ask_game">What type of game do you want to play?</string>
    <string name="play_against_computer"> vs. computer</string>
    <string name="two_player_text"> Two players</string>

    <string name="no_game_choice_error"> You must choose either a game against the computer or a two player game.  </string>



    <!-- for BoardActivity -->
    <string name="multiple_choice_error"> "Sticks must be removed from the same row!" </string>
    <string name="no_choice_error"> "At least one stick must be chosen" </string>
    <string name="all_sticks_error"> "You can't choose all the sticks; leave at least one!" </string>
    <string name="computer_choice_announcement"> It is the computer\'s turn.\nThe computer chooses %1$d stick(s) from row %2$d:</string>
    <string name="human_player_announcement"> It is your turn.  Please choose your sticks from one row. </string>
    <string name="player_announcement"> It is %1$s\'s turn.  Please choose your sticks from one row. </string>
    <string name="game_over_announcement"> Game Over.  The winner is: %1$s! </string>
    <string name="new_game"> Play again </string>



    <!-- for activity_computer_choice -->
    <string name="announce_computer_choices"> Enter your choices here for play against the computer </string>

    <string name ="select_first"> Select who goes first: </string>
    <string name="computer">Computer</string>
    <string name="person">You</string>

    <string name="ask_difficulty"> Choose a difficulty level:</string>
    <string name="easy"> easy </string>
    <string name="moderate"> moderate </string>
    <string name="expert"> expert </string>

    <string name="no_first_or_level_choices_error"> You must choose a first player as well as difficulty level.  </string>

    <string name="start_game_button_text"> Start game </string>




</resources>
